# sconf

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  flake.nix
src/: main.c
